--- a/src/infoBox/InfoBox.css
+++ b/src/infoBox/InfoBox.css
@@ -75,8 +75,8 @@
 
 .InfoBox__focus .InfoDetails__token {
     left: 0px;
-    width: 250px;
-    height: 250px;
+    width: 240px;
+    height: 240px;
 }
 
 .InfoDetails__tokenMask {
@@ -95,8 +95,8 @@
 
 .InfoBox__focus .InfoDetails__tokenMask {
     left: 0px;
-    width: 250px;
-    height: 250px;
+    width: 240px;
+    height: 240px;
 }
 
 .InfoDetails__visibilityIndicator {
