--- a/src/token/Token.css
+++ b/src/token/Token.css
@@ -51,7 +51,7 @@
     border: 0.5px solid black;
     left: -0.5px;
     top: -0.5px;
-    box-shadow: 0px 0px 0.5px 0.5px black, inset 0px 0px 0.5px 0.5px black;
+    box-shadow: 0px 0px 1px 1px black, inset 0px 0px 1px 1px black;
 }
 
 .TokenName__text {
